[tool.poetry]
name = "repl-nix-cto-py"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "repl_nix_cto_py"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^3.0.3"
poetry = "^1.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
